--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -173,6 +173,13 @@
         background-size: 100%;
         background-image: url("../images/apply_3.png")
     }
+    &.kk-radio {
+        background-size: 80%;
+        background-image: url("../images/radio_unchecked.png")
+    }
+    &.kk-radio.active {
+        background-image: url("../images/radio_checked.png")
+    }
 }
 
 .btn-navbar {
