--- a/src/templates/me.html
+++ b/src/templates/me.html
@@ -6,7 +6,7 @@
 </div>
 <div class="scrollable">
     <div class="scrollable-content">
-        <div class="translator-cover">
+        <div class="translator-cover" ng-click="go('/me_info')">
             <imageview data-rate="750/422" src="user.cover"></imageview>
             <div class="translator-info left">
                 <span class="h3 block">姚逢临</span>
