--- a/src/less/index.less
+++ b/src/less/index.less
@@ -64,7 +64,6 @@
     border-radius: 0;
     -webkit-border-radius: 0;
 }
-
 .rectangle {
     border-radius: 0;
     -webkit-border-radius: 0;
@@ -198,6 +197,7 @@
     // width: 50px;
     border-bottom: 1px solid @gray-lighter;
 }
+
 .country {
     .country-header {
         padding: 5px 8px;
@@ -212,6 +212,7 @@
         border-right: 0;
     }
 }
+
 .cover {
     position: absolute;
     top: 0;
@@ -233,7 +234,6 @@
         background-color: white;
         border-radius: 5px;
         -webkit-border-radius: 5px;
-
     }
     .cover-close {
         display: inline-block;
@@ -248,6 +248,7 @@
         background-repeat: no-repeat;
     }
 }
+
 .translator {
     position: relative;
     display: block;
@@ -264,13 +265,14 @@
         background-color: fade(black, 50%);
     }
 }
+
 .translator-cover {
     position: relative;
     margin-bottom: 50px;
     .translator-info {
         position: absolute;
         bottom: 0;
-        padding:8px;
+        padding: 8px;
         color: white;
     }
     .left {
@@ -293,6 +295,7 @@
         overflow: hidden;
     }
 }
+
 .recommand {
     position: relative;
     margin: 10px 15px 40px 15px;
@@ -317,6 +320,7 @@
         border: 3px solid white;
     }
 }
+
 .picker {
     position: relative;
     margin: 8px;
@@ -328,14 +332,14 @@
         width: 50%;
         height: 114px;
         overflow: auto;
-        -webkit-overflow-scrolling:touch;
+        -webkit-overflow-scrolling: touch;
     }
     .picker-footer {
-        padding-top:8px;
+        padding-top: 8px;
         padding-bottom: 8px;
         float: left;
         width: 100%;
-        border-top:5px solid @gray-lighter;
+        border-top: 5px solid @gray-lighter;
         background-color: @brand-primary;
         color: white;
     }
@@ -348,5 +352,19 @@
         background-repeat: no-repeat;
         background-position: 110px center;
         background-size: 10%;
+    }
+}
+.language_panel {
+    .list-group-item.selected {
+        color: @brand-primary;
+        background-image: url("../images/checked.png");
+        background-repeat: no-repeat;
+        background-position: right center;
+        background-size: 10%;
+    }
+}
+.me_info {
+    .pull-right {
+        width:80%
     }
 }
