--- a/src/less/override.less
+++ b/src/less/override.less
@@ -12,6 +12,10 @@
 .section.m {
 	margin: 8px;
 }
+.section.large {
+	padding-left: 15px;
+	padding-right: 15px;
+}
 .row.grid-gutter >* {
 	margin-bottom: 5px;
 }
