--- a/src/templates/authen_industry.html
+++ b/src/templates/authen_industry.html
@@ -9,8 +9,8 @@
 		
 		
         <div flow-init ng-controller="authenUploadController" class="uploader" ng-if="!is_authen">
-            <div class="section"></div>
-            <div class="section text-center">
+            <div class="section large"></div>
+            <div class="section large text-center">
                 <span class="block full-width flow-btn text-center">
                     <img src="../images/upload_3.png" ng-show="!$flow.files.length" alt="">
                     <div ng-repeat="file in $flow.files" class="preview-box">
@@ -19,17 +19,17 @@
 		            </div>
             	</span>
         	</div>
-        <div class="section">
+        <div class="section large">
             <div class="btn-group justified">
                 <span flow-btn flow-attrs="{accept:'image/*'}" class="btn btn-primary needsclick" >添加证书</span>
                 <span class="btn btn-danger" ng-click="ajaxForm($flow)" ng-show="$flow.files.length > 0">提交审核</span>
             </div>
         </div>
-        <div class="section text-grey text-center text-small">
+        <div class="section large text-grey text-center text-small">
             我们将在1-2个工作日内完成信息审核
         </div>
     </div>
-    <div class="section text-center" ng-if="is_authen">
+    <div class="section large text-center" ng-if="is_authen">
         <h4 class="text-center"><p>恭喜您，完成实名认证</p>下面是您的实名信息</h4>
         <div ng-repeat="authen in authens track by $index" class="preview-box">
             <img ng-src="{{authen}}" alt="" style="margin-bottom:5px;" class="block full-width">
