--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -5,9 +5,9 @@
     </span>
 </div>
 <div ui-content-for="navbarAction">
-    <div class="btn sidebar-toggle">
+    <a ng-href="#/setting" class="btn sidebar-toggle">
         <i class="fa fa-cog text-large"></i>
-    </div>
+    </a>
 </div>
 <div ui-content-for="backAction">
     <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
