--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -3,17 +3,17 @@
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
-        <div class="section" ng-click="show('signin')">
+        <div class="section large" ng-click="show('signin')">
             <a class="btn btn-warning block full-width">已有账号，马上登录</a>
         </div>
-        <div class="section" ng-click="show('signup')">
+        <div class="section large" ng-click="show('signup')">
             <a class="btn btn-warning block full-width bg-white text-primary">通过手机号注册</a>
         </div>
-        <div class="section" ng-click="show('signup_email')">
+        <div class="section large" ng-click="show('signup_email')">
             <a class="btn btn-warning block full-width bg-white text-primary">通过邮箱注册</a>
         </div>
-        <div class="section text-right">
-            <a class="text-gray">忘记密码</a>
+        <div class="section large text-right">
+            <a class="text-gray" ng-click="show('forget')">忘记密码</a>
         </div>
         <div class="section text-center" style="margin:50px auto 20px">
             --------或通过以下方式登录--------
@@ -63,7 +63,7 @@
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
-        <div class="section">
+        <div class="section large">
             <div class="pull-left">国家和地区</div>
             <div class="pull-right text-primary">中国</div>
         </div>
@@ -107,6 +107,33 @@
             </div>
             <div class="kk-input-group flat">
                 <input type="password" name="password" class="form-control" placeholder="设置密码，至少8位" ng-model="input.password" required>
+                <span class="tip text-warning">error</span>
+            </div>
+            <div class="kk-input-group">
+                <button type="submit" class="btn btn-warning block full-width">注册</button>
+            </div>
+        </form>
+    </div>
+</div>
+<!-- forget password -->
+<div class="scrollable" ng-show="sidebar.current=='forget'">
+    <div class="scrollable-content">
+        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary" style="position:absolute;"><i class="fa fa-chevron-left"></i></div>
+        <div class="text-center">
+            <img ng-src="../images/logo_signin.png" alt="">
+        </div>
+        <form ng-submit="ajaxForm('signin')">
+            <div class="kk-input-group flat">
+                <input type="text" name="tel_email" class="form-control" placeholder="请输入常用邮箱/手机号" ng-model="input.telephone" required ng-pattern="/(^(13\d|14[57]|15[^4,\D]|17[678]|18\d)\d{8}|170[059]\d{7})$/">
+                <span class="tip text-warning">error</span>
+            </div>
+            <div class="kk-input-group flat">
+                <button type="button" class="btn btn-warning btn-sms">获取验证码</button>
+                <input type="text" name="smscode" class="form-control" placeholder="请输入验证码" ng-model="input.smscode" required>
+                <span class="tip text-warning">error</span>
+            </div>
+            <div class="kk-input-group flat">
+                <input type="password" name="password" class="form-control" placeholder="重设密码，至少8位" ng-model="input.password" required>
                 <span class="tip text-warning">error</span>
             </div>
             <div class="kk-input-group">
