--- a/src/templates/tasks.html
+++ b/src/templates/tasks.html
@@ -1,9 +1,9 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
 <div ui-content-for="title">任务清单</div>
 <div ui-content-for="navbarAction">
-    <div class="btn sidebar-toggle">
+    <a ng-href="#/setting" class="btn sidebar-toggle">
         <i class="fa fa-cog text-large"></i>
-    </div>
+    </a>
 </div>
 <div ui-content-for="backAction">
     <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
