--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -173,6 +173,33 @@
         background-size: 100%;
         background-image: url("../images/apply_3.png")
     }
+    &.kk-good {
+        width: 74px;
+        height: 26px;
+        background-size: 100%;
+        background-image: url("../images/good_normal.png")
+    }
+    &.kk-good.active {
+        background-image: url("../images/good_active.png")
+    }
+    &.kk-soso {
+        width: 74px;
+        height: 26px;
+        background-size: 100%;
+        background-image: url("../images/soso_normal.png")
+    }
+    &.kk-soso.active {
+        background-image: url("../images/soso_active.png")
+    }
+    &.kk-bad {
+        width: 74px;
+        height: 26px;
+        background-size: 100%;
+        background-image: url("../images/bad_normal.png")
+    }
+    &.kk-bad.active {
+        background-image: url("../images/bad_active.png")
+    }
     &.kk-radio {
         background-size: 80%;
         background-image: url("../images/radio_unchecked.png")
