--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -62,20 +62,20 @@
                 <div class="list-group-item">
                     <p class="text-small">评价标签</p>
                     <div class="row grid-gutter">
-                        <div class="col-xs-3">
-                            <span class="btn btn-default rectangle">评价标签</span>
+                        <div class="col-xs-4">
+                            <span class="btn btn-default rectangle full-width">评价标签</span>
                         </div>
-                        <div class="col-xs-3">
-                            <span class="btn btn-default rectangle">评价标签</span>
+                        <div class="col-xs-4">
+                            <span class="btn btn-default rectangle full-width">评价标签</span>
                         </div>
-                        <div class="col-xs-3">
-                            <span class="btn btn-default rectangle">评价标签</span>
+                        <div class="col-xs-4">
+                            <span class="btn btn-default rectangle full-width">评价标签</span>
                         </div>
-                        <div class="col-xs-3">
-                            <span class="btn btn-default rectangle">评价标签</span>
+                        <div class="col-xs-4">
+                            <span class="btn btn-default rectangle full-width">评价标签</span>
                         </div>
-                        <div class="col-xs-3">
-                            <span class="btn btn-default rectangle">评价标签</span>
+                        <div class="col-xs-4">
+                            <span class="btn btn-default rectangle full-width">评价标签</span>
                         </div>
                     </div>
                     <div class="text-right">
