--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -108,7 +108,7 @@
                             <label class="btn rectangle" ng-class="{'text-primary':input.category  =='other','bg-gray-lighter':input.category  !='other'}">
                                 <input type="radio" class="hide" ng-model="input.category " name="country" value="other">其他</label>
                         </div>
-                        <div class="section large section-wide" ng-show="input.category  =='other'">
+                        <div class="section section-wide" ng-show="input.category  =='other'">
                             <input type="text" class="form-control rectangle">
                         </div>
                     </div>
