add share support

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -26,6 +26,15 @@
 .text-success {
 	color:@brand-success;
 }
+.text-facebook {
+	color: #3a579d;
+}
+.text-weibo {
+	color: #d52b2b;
+}
+.text-weixin {
+	color: #00a70b;
+}
 // ----------------------------text size---------------------------- //
 .text-very-large {
 	font-size: 30px;
