--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -19,7 +19,7 @@
         <!-- banner -->
         <banner data-options="{}" data-rate="750/175">
             <div class="image-holder" ng-repeat="b in banners" on-repeat-done>
-                <img ng-src="../images/banner.png" alt="">
+                <img ng-src="../images/banner.png" class="block full-width" alt="">
             </div>
         </banner>
         <!-- filter -->
