--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -207,6 +207,13 @@
     &.kk-radio.active {
         background-image: url("../images/radio_checked.png")
     }
+    &.kk-weixin-share-tip {
+        width: 100%;
+        height: 100%;
+        background-size: 100%;
+        background-image: url("../images/weixin_share.png");
+        background-position: top right;
+    }
 }
 
 .btn-navbar {
