--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -8,7 +8,7 @@
 // Bootstrap Overrides
 @state-warning-bg:@brand-warning;
 @state-warning-text:white;
-@font-family-base:"微软雅黑";
+@font-family-base:Arial, "微软雅黑";
 @app-bg:#f5f1e8;
 @font-size-base:12px;
 @sidebar-background:white;
