--- a/src/templates/setting.html
+++ b/src/templates/setting.html
@@ -44,7 +44,7 @@
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
         </div>
-        <div class="section text-primary text-center">
+        <div class="section text-primary text-center" ng-click="exit()">
         	<a class="block full-width text-primary">退出登录</a>
         </div>
     </div>
